--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>GPA Calculator by Thuan</title>
+  <title>GPA Calculator</title>
   <style>
     body {
       background-color: #f0f4f8;
@@ -99,7 +99,7 @@
 
   <footer>
     <hr>
-    <p>Created by Thuan3TC | <a href="https://facebook.com" target="_blank">Facebook</a></p>
+    <p>Created by Thuan3TC
   </footer>
 
 </body>
